WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237515
Parsing of list-style shorthand is incorrect
https://bugs.webkit.org/show_bug.cgi?id=237515
Summary
Parsing of list-style shorthand is incorrect
Antoine Quint
Reported
2022-03-07 02:50:59 PST
Parsing of list-style shorthand is incorrect
Attachments
Patch
(10.66 KB, patch)
2022-03-07 02:53 PST
,
Antoine Quint
koivisto
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(27.11 KB, patch)
2022-03-07 04:47 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-03-07 02:53:23 PST
Created
attachment 453952
[details]
Patch
Antoine Quint
Comment 2
2022-03-07 04:47:03 PST
Created
attachment 453965
[details]
Patch for landing
Antoine Quint
Comment 3
2022-03-07 06:15:46 PST
Committed
r290884
(
248115@trunk
): <
https://commits.webkit.org/248115@trunk
>
Radar WebKit Bug Importer
Comment 4
2022-03-07 06:16:17 PST
<
rdar://problem/89902669
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug