Parsing of list-style shorthand is incorrect https://bugs.webkit.org/show_bug.cgi?id=237515

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-lists/parsing/list-style-computed.sub-expected.txt:
* web-platform-tests/css/css-lists/parsing/list-style-valid-expected.txt:
* web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-expected.txt:
* web-platform-tests/css/css-pseudo/parsing/marker-supported-properties-in-animation-expected.txt:
* web-platform-tests/css/cssom/shorthand-values-expected.txt:

Source/WebCore:

The spec at https://drafts.csswg.org/css-lists/#list-style-property says the order of the properties
in the "list-style" shorthand is <'list-style-position'> || <'list-style-image'> || <'list-style-type'>.

Additionally, the "none" value needs special handling such that it sets "list-style-type".

* css/CSSProperties.json:
* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseShorthand):

LayoutTests:

Some non-WPT tests had the wrong assumption on the shorthand order
for list-style, so we update those tests to match the spec.

Additionally, the WPT test css/css-lists/list-style-type-string-004.html now passes.

* fast/css/cssText-shorthand-expected.txt:
* fast/css/cssText-shorthand.html:
* fast/css/getComputedStyle/getComputedStyle-list-style-shorthand-expected.txt:
* fast/css/getComputedStyle/getComputedStyle-list-style-shorthand.html:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/248115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290884 268f45cc-cd09-0410-ab3c-d52691b4dbfc